--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,8 +3,8 @@ build-std-features = ["compiler-builtins-mem"]
 build-std = ["core", "compiler_builtins"]
 
 [build]
-target = "zetaos.json"
-# target = "x86_64-unknown-none"
+target = "x86_64-unknown-none"
+# target = "zetaos.json"
 
 [target.'cfg(target_os = "linux")']
 rustflags = ["-C", "link-arg=-nostartfiles"]
@@ -16,4 +16,5 @@ rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]
 rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
 
 [target.'cfg(target_os = "none")']
-runner = "bootimage runner"
+runner = ".cargo/runner.sh"
+# runner = "bootimage runner"
